# bariago

./: CMakeLists.txt  README.md  package.xml
launch/: bar_env.launch  bariago.launch
msg/: Cocktail.msg  CocktailMixing.msg
src/: InterFaceNode.py  OrderServer.py  PlanningNode.py  QuestionServer.py  Tiago_controller.py  arm_controller.py  bariago_pick.cpp  bariago_spin.cpp  grip_controller.py  move_x.py  parallel_gripper_controller.py  prolog_init.txt  serv.cpp  spin.py  up.cpp
src/armmover_cpp/: bariago_pick.cpp  down.cpp
srv/: CocktailOrder.srv  DrinkEvaluation.srv
